--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -49,6 +49,9 @@ button{
 .inputItem{
     padding: 1rem;
 }
+input[type="date"]{
+    padding: 0.85rem;
+}
 .queryContainer{
     display: inline-flex;
     right: 1rem;
@@ -65,6 +68,8 @@ button{
     }
     .inputItem{
         margin: 1rem auto;
+        padding: 0.5rem;
+        border: solid 1px #ddd;
     }
     .queryContainer{
         position: absolute;
