pattern validator added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="searchContainer">
 <button class="btn" [disabled]="loading" (click)="getAllBetween()">Get All between 1960 and 1965</button>
-<div class="queryContainer">
-    <input class="inputItem" type="text" #queryName placeholder="Enter Name" required pattern="[A-Za-z]{3}">
+<form class="queryContainer">
+    <input class="inputItem" type="text" #queryName placeholder="Enter Name" required pattern="[a-zA-Z][a-zA-Z ]+">
     <input class="inputItem" type="date" #queryDate required placeholder="Enter DOB">
-    <button class="inputItem" [disabled]="loading" (click)="patientList(queryName.value,queryDate.value)">Search</button>
-</div>
+    <button type="submit" class="inputItem" [disabled]="loading" (click)="patientList(queryName.value,queryDate.value)">Search</button>
+</form>
 </div>
 
 <table class="table">
@@ -29,5 +29,5 @@
 
 </table>
 <footer class="footer">
-    Request TIme: {{ requestTime | date:'mediumTime' }}
+    Request Time: {{ requestTime | date:'mediumTime' }}
 </footer>
